--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <div class="container">
     <section class="card-bg">
-      <img src="./images/bg-pattern-top.svg" class="bg-pattern-top">
-      <img src="./images/bg-pattern-bottom.svg" class="bg-pattern-bottom">
+      <img src="./images/bg-pattern-top.svg" alt="bg-pattern-top" class="bg-pattern-top">
+      <img src="./images/bg-pattern-bottom.svg" alt="bg-pattern-bottom" class="bg-pattern-bottom">
     </section> 
       <div class="card">
 
@@ -20,7 +20,7 @@
         </section>
 
         <section class="section-2">
-          <h1>Victor Crest <span style="font-size:18px;">26</span></h1>
+          <h2>Victor Crest <span style="font-size:18px;">26</span></h2>
           <p>London</p>
         </section>
 
